--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,8 @@ dependencies = [
     "ipython (>=9.8.0,<10.0.0)",
     "pillow (>=12.0.0,<13.0.0)",
     "django-filter (>=25.2,<26.0)",
-    "drf-yasg (>=1.21.11,<2.0.0)"
+    "drf-yasg (>=1.21.11,<2.0.0)",
+    "aiogram (==3.13.1)"
 ]
 
 
