--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ dependencies = [
     "pillow (>=12.0.0,<13.0.0)",
     "django-filter (>=25.2,<26.0)",
     "drf-yasg (>=1.21.11,<2.0.0)",
-    "aiogram (==3.13.1)"
+    "requests (>=2.32.5,<3.0.0)",
 ]
 
 
