--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "django-filter (>=25.2,<26.0)",
     "drf-yasg (>=1.21.11,<2.0.0)",
     "requests (>=2.32.5,<3.0.0)",
+    "django-cors-headers (>=4.9.0,<5.0.0)",
 ]
 
 
