--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,14 @@ on: [push]
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      SECRET_KEY: "temporary-secret-key-for-tests-only-1234567890"
+      DEBUG: "True"
+      DATABASE_NAME: "test_db"
+      DATABASE_USER: "test_user"
+      DATABASE_PASSWORD: "test_pass"
+      DATABASE_HOST: "localhost"
+      DATABASE_PORT: "5432"
     steps:
       - uses: actions/checkout@v4
 
