--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,9 @@ jobs:
 
       - name: Run tests
         run: poetry run python manage.py test
+        env:
+          SECRET_KEY: "temporary-secret-key-for-tests-123456789"
+          DEBUG: "True"
 
   deploy:
     needs: test
