--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,27 @@ name: CI/CD to Yandex Cloud
 on: [ push ]
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+
+      - name: Install Poetry
+        run: curl -sSL https://install.python-poetry.org | python3 -
+
+      - name: Install dependencies
+        run: poetry install --only main --no-root
+
+      - name: Run linting (flake8)
+        run: poetry run flake8 .
+
   test:
+    needs: lint
     runs-on: ubuntu-latest
     env:
       SECRET_KEY: "temporary-secret-key-for-tests-only-1234567890"
@@ -33,8 +53,22 @@ jobs:
           SECRET_KEY: "temporary-secret-key-for-tests-123456789"
           DEBUG: "True"
 
-  deploy:
+  build-docker:
     needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build Docker images
+        run: |
+          docker compose build --no-cache
+
+
+  deploy:
+    needs: build-docker
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
