--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "requests (>=2.32.5,<3.0.0)",
     "django-cors-headers (>=4.9.0,<5.0.0)",
     "coverage (>=7.13.0,<8.0.0)",
+    "flake8 (>=7.3.0,<8.0.0)",
 ]
 
 
@@ -38,7 +39,3 @@ exclude = "venv"
 
 [tool.isort]
 line_length = 119
-[dependency-groups]
-dev = [
-    "flake8 (>=7.3.0,<8.0.0)"
-]
